.metadata/.plugins/org.eclipse.cdt.ui/TIM6_LED.build.log
12:02:15 **** Incremental Build of configuration Debug for project TIM6_LED ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:123:26: error: 'Led_GPIO_Port' undeclared (first use in this function); did you mean 'LD6_GPIO_Port'?
  123 |        HAL_GPIO_WritePin(Led_GPIO_Port, Led_Pin, 0);
      |                          ^~~~~~~~~~~~~
      |                          LD6_GPIO_Port
../Core/Src/main.c:123:26: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:123:41: error: 'Led_Pin' undeclared (first use in this function); did you mean 'LD3_Pin'?
  123 |        HAL_GPIO_WritePin(Led_GPIO_Port, Led_Pin, 0);
      |                                         ^~~~~~~
      |                                         LD3_Pin
../Core/Src/main.c:194:13: error: invalid storage class for function 'MX_I2C1_Init'
  194 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:228:13: error: invalid storage class for function 'MX_I2S3_Init'
  228 | static void MX_I2S3_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:262:13: error: invalid storage class for function 'MX_SPI1_Init'
  262 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:300:13: error: invalid storage class for function 'MX_TIM6_Init'
  300 | static void MX_TIM6_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:338:13: error: invalid storage class for function 'MX_GPIO_Init'
  338 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:455:1: error: expected declaration or statement at end of input
  455 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:57:13: warning: 'MX_GPIO_Init' used but never defined
   57 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:58:13: warning: 'MX_I2C1_Init' used but never defined
   58 | static void MX_I2C1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:59:13: warning: 'MX_I2S3_Init' used but never defined
   59 | static void MX_I2S3_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:60:13: warning: 'MX_SPI1_Init' used but never defined
   60 | static void MX_SPI1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:61:13: warning: 'MX_TIM6_Init' used but never defined
   61 | static void MX_TIM6_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:446:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  446 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:338:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  338 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:300:13: warning: 'MX_TIM6_Init' defined but not used [-Wunused-function]
  300 | static void MX_TIM6_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:262:13: warning: 'MX_SPI1_Init' defined but not used [-Wunused-function]
  262 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:228:13: warning: 'MX_I2S3_Init' defined but not used [-Wunused-function]
  228 | static void MX_I2S3_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:194:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  194 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:148:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  148 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

12:02:17 Build Failed. 10 errors, 12 warnings. (took 2s.157ms)

